--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
