--- a/.github/workflows/generate static.yml
+++ b/.github/workflows/generate static.yml
@@ -9,13 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Build webpack
+        with:
+          script: |
+            npm run build
+            
+      - name: Push to branch
         uses: actions/checkout@v2
         with:
-          ref: www
-        script: |
-          npm run build
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "Webpack generated"
-          git push
+          script: |
+            git config user.name github-actions
+            git config user.email github-actions@github.com
+            git add .
+            git commit -m "Webpack generated"
+            git push
+            
