--- a/.github/workflows/generate static.yml
+++ b/.github/workflows/generate static.yml
@@ -14,7 +14,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '12'
-      - run: npm run build
+      - run: |
+          npm i
+          npm run build
       - name: Commit/Push WWW branch
         uses: actions/checkout@v2
         with:
