--- a/.github/workflows/generate static.yml
+++ b/.github/workflows/generate static.yml
@@ -8,10 +8,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-16.04
     steps:
-      - name: Checkout master
+      - name: build and deploy
         uses: actions/checkout@v2
-      - name: Build webpack
-      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
