--- a/.github/workflows/generate static.yml
+++ b/.github/workflows/generate static.yml
@@ -20,6 +20,8 @@ jobs:
           git merge origin/master
           npm i
           npm run build
+          rm -r docs
+          mv /dist/* /docs
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add -A
