--- a/.github/workflows/generate static.yml
+++ b/.github/workflows/generate static.yml
@@ -16,7 +16,7 @@ jobs:
       - run: |
           npm i
           npm run build
-          rm -r docs
+          mkdir docs
           mv dist/* /docs
           git config user.name github-actions
           git config user.email github-actions@github.com
